# server

./: .cookiecutter.json  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  environment.yml  noxfile.py  pyproject.toml
.github/workflows/: aws-ecr.yml  constraints.txt  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
notebooks/: 00_crawl_conf.ipynb  01_analyze_conf.ipynb  10_index_conf.ipynb  20_hybrid.ipynb
server/: cli.py  logging.ini  main.py  search_utils.py
src/cli/: __main__.py
src/server/: __init__.py  __main__.py  main.py
tests/: __init__.py  test_cli.py  test_main.py  test_search_utils.py
tests/cli/: test_main.py
