[tool.poetry]
name = "server"
version = "0.0.0"
description = "Server"
authors = ["Dallan Quass <dallan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DallanQ/server"
repository = "https://github.com/DallanQ/server"
documentation = "https://server.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/DallanQ/server/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.1"
dparse = "^0.6.2"
safety = "^2.3.5"
certifi = "^2022.12.7"
GitPython = "^3.1.31"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-json-logger = "^2.0.6"
python-dotenv = "^0.21.1"
openai = {extras = ["datalib"], version = "^0.27.0"}
pinecone-client = {extras = ["grpc"], version = "^2.2.1"}
spacy = "^3.5.0"
boto3 = "^1.26.111"
urllib3 = ">=1.26.18"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=22.12.0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=6.0.0"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=3.3.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
markdownify = "^0.11.6"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"

[tool.poetry.scripts]
server = "server.cli:main"

[tool.coverage.paths]
source = ["server", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["server", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
